fixed horizontal scroll backkground-color bug in file tabs

--- a/client/src/styles/components/_about.scss
+++ b/client/src/styles/components/_about.scss
@@ -204,9 +204,13 @@
 }
 
 .scroll::-webkit-scrollbar {
-	width: 0px;
+  width: 0px;
+  height: 0px;
+  background-color: transparent;
 }
 .scroll::-webkit-scrollbar-thumb {
+  width: 0px;
+  height: 0px;
   background-color: transparent;
 }
 
