--- a/style.2a44.css
+++ b/style.2a44.css
@@ -1378,9 +1378,13 @@ Link.nav-link:not(.btn) {
     padding-left: 45px; }
 
 .scroll::-webkit-scrollbar {
-  width: 0px; }
+  width: 0px;
+  height: 0px;
+  background-color: transparent; }
 
 .scroll::-webkit-scrollbar-thumb {
+  width: 0px;
+  height: 0px;
   background-color: transparent; }
 
 #editorbody-scroll::-webkit-scrollbar-track {
@@ -2190,4 +2194,4 @@ footer .container {
 #loadOverlay {
   display: none; }
 
-/*# sourceMappingURL=style.cc5a.css.map*/
+/*# sourceMappingURL=style.2a44.css.map*/
